# python-interfaces

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
src/core/: entities.py
src/people/: entities.py  repositories.py  usecases.py
tests/: conftest.py
tests/core/: test_entities.py
tests/people/: conftest.py  test_entities.py  test_repositories.py  test_usecases.py
