[tool.poetry]
name = "python-interfaces"
version = "0.1.0"
description = ""
authors = ["Johan Vergeer <johanvergeer@gmail.com>"]

packages = [
    { include = "people", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
bpython = "^0.18"
typing_extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
faker = "^4.0.3"
pytest-mock = "^3.1.0"
seed-isort-config = "^2.1.1"

[tool.isort]
known_first_party = ["people"]
known_third_party = ["typing_extensions"]
known_test_libs = ["pytest", "faker", "pytest-mock"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

