[tool.poetry]
name = "python-interfaces"
version = "0.1.0"
description = ""
authors = ["Johan Vergeer <johanvergeer@gmail.com>"]

packages = [
    { include = "people", from = "src" },
    { include = "core", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
bpython = "^0.18"
typing_extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
faker = "^4.0.3"
pytest-mock = "^3.1.0"
seed-isort-config = "^2.1.1"
pre-commit = "^2.3.0"

[tool.isort]
multi_line_output=3
include_trailing_comma = true
line_length=88
force_grid_wrap=0
use_parentheses = true
known_first_party = ["people"]
known_third_party = ["attr", "core", "typing_extensions"]
known_test_libs = ["pytest", "faker", "pytest-mock"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
